tests/rosetta/transpiler/Scala/4-rings-or-4-squares-puzzle.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/4-rings-or-4-squares-puzzle.scala:28: error: not found: type any
  def getCombs(low: Int, high: Int, unique: Boolean): Map[String,any] = {
                                                                 ^
/workspace/mochi/tests/rosetta/transpiler/Scala/4-rings-or-4-squares-puzzle.scala:40: error: not found: value continue
                continue
                ^
/workspace/mochi/tests/rosetta/transpiler/Scala/4-rings-or-4-squares-puzzle.scala:43: error: not found: value continue
                continue
                ^
/workspace/mochi/tests/rosetta/transpiler/Scala/4-rings-or-4-squares-puzzle.scala:46: error: not found: value continue
                continue
                ^
/workspace/mochi/tests/rosetta/transpiler/Scala/4-rings-or-4-squares-puzzle.scala:49: error: not found: value continue
                continue
                ^
5 errors found
